== 0.4.6 master
* bug fixes
  * inheritable attributes no longer mutable by subclasses (yyyc514)
* minor enhancements
  * Register a customized response parser
  * Curl inspired output when using the binary in verbose mode (alexvollmer)
  * raise UnsupportedURIScheme when scheme is not HTTP or HTTPS (djspinmonkey)
  * Allow SSL for ports other than 443 when scheme is HTTPS (stefankroes)
  * Accept PEM certificates via HTTParty#pem (chrislo)
  * Support HEAD and OPTION verbs (grempe)
  * Verify SSL certificates when providing a PEM file (collectiveidea/danielmorrison)

== 0.4.5 2009-09-12
* bug fixes
  * Fixed class-level headers overwritten by cookie management code. Closes #19
  * Fixed "superclass mismatch for class BlankSlate" error. Closes #20
  * Fixed reading files as post data from the command line (vesan)
* minor enhancements
  * Timeout option added; will raise a Timeout::Error after the timeout has elapsed (attack). Closes #17
    HTTParty.get "http://github.com", :timeout => 1
  * Building gem with Jeweler

== 0.4.4 2009-07-19
* 2 minor update
  * :query no longer sets form data. Use body and set content type to application/x-www-form-urlencoded if you need it. :query was wrong for that.
  * Fixed a bug in the cookies class method that caused cookies to be forgotten after the first request.
  * Also, some general cleanup of tests and such.
  
== 0.4.3 2009-04-23
* 1 minor update
  * added message to the response object
  
== 0.4.2 2009-03-30
* 2 minor changes
  * response code now returns an integer instead of a string (jqr)
  * rubyforge project setup for crack so i'm now depending on that instead of jnunemaker-crack

== 0.4.1 2009-03-29
* 1 minor fix
  * gem 'jnunemaker-crack' instead of gem 'crack'
  
== 0.4.0 2009-03-29
* 1 minor change
  * Switched xml and json parsing to crack (same code as before just moved to gem for easier reuse in other projects)
  
== 0.3.1 2009-02-10
* 1 minor fix, 1 minor enhancement
  * Fixed unescaping umlauts (siebertm)